// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkInteractiveStarRating should render 4 stars based on hoverRating as it has priority over rating 1`] = `
<div
  className="bpk-star-rating"
  onMouseLeave={[Function]}
>
  <BpkInteractiveStar
    key="star-1"
    label="1 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={1}
  />
  <BpkInteractiveStar
    key="star-2"
    label="2 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={2}
  />
  <BpkInteractiveStar
    key="star-3"
    label="3 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={true}
    type="full"
    value={3}
  />
  <BpkInteractiveStar
    key="star-4"
    label="4 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={4}
  />
  <BpkInteractiveStar
    key="star-5"
    label="5 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={5}
  />
</div>
`;

exports[`BpkInteractiveStarRating should render correctly if you give it more than the max rating allowed 1`] = `
<div
  className="bpk-star-rating"
  onMouseLeave={[Function]}
>
  <BpkInteractiveStar
    key="star-1"
    label="1 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={1}
  />
  <BpkInteractiveStar
    key="star-2"
    label="2 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={2}
  />
  <BpkInteractiveStar
    key="star-3"
    label="3 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={3}
  />
  <BpkInteractiveStar
    key="star-4"
    label="4 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={4}
  />
  <BpkInteractiveStar
    key="star-5"
    label="5 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={5}
  />
</div>
`;

exports[`BpkInteractiveStarRating should render correctly with "large" attribute 1`] = `
<div
  className="bpk-star-rating"
  onMouseLeave={[Function]}
>
  <BpkInteractiveStar
    key="star-1"
    label="1 out of 5 stars"
    large={true}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={1}
  />
  <BpkInteractiveStar
    key="star-2"
    label="2 out of 5 stars"
    large={true}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={2}
  />
  <BpkInteractiveStar
    key="star-3"
    label="3 out of 5 stars"
    large={true}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={3}
  />
  <BpkInteractiveStar
    key="star-4"
    label="4 out of 5 stars"
    large={true}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={4}
  />
  <BpkInteractiveStar
    key="star-5"
    label="5 out of 5 stars"
    large={true}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={true}
    type="full"
    value={5}
  />
</div>
`;

exports[`BpkInteractiveStarRating should render correctly with "maxRating" attribute 1`] = `
<div
  className="bpk-star-rating"
  onMouseLeave={[Function]}
>
  <BpkInteractiveStar
    key="star-1"
    label="1 out of 8 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={1}
  />
  <BpkInteractiveStar
    key="star-2"
    label="2 out of 8 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={2}
  />
  <BpkInteractiveStar
    key="star-3"
    label="3 out of 8 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={3}
  />
  <BpkInteractiveStar
    key="star-4"
    label="4 out of 8 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={4}
  />
  <BpkInteractiveStar
    key="star-5"
    label="5 out of 8 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={true}
    type="full"
    value={5}
  />
  <BpkInteractiveStar
    key="star-6"
    label="6 out of 8 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={6}
  />
  <BpkInteractiveStar
    key="star-7"
    label="7 out of 8 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={7}
  />
  <BpkInteractiveStar
    key="star-8"
    label="8 out of 8 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={8}
  />
</div>
`;

exports[`BpkInteractiveStarRating should render correctly with 0 stars 1`] = `
<div
  className="bpk-star-rating"
  onMouseLeave={[Function]}
>
  <BpkInteractiveStar
    key="star-1"
    label="1 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={1}
  />
  <BpkInteractiveStar
    key="star-2"
    label="2 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={2}
  />
  <BpkInteractiveStar
    key="star-3"
    label="3 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={3}
  />
  <BpkInteractiveStar
    key="star-4"
    label="4 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={4}
  />
  <BpkInteractiveStar
    key="star-5"
    label="5 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={5}
  />
</div>
`;

exports[`BpkInteractiveStarRating should render correctly with 3 stars 1`] = `
<div
  className="bpk-star-rating"
  onMouseLeave={[Function]}
>
  <BpkInteractiveStar
    key="star-1"
    label="1 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={1}
  />
  <BpkInteractiveStar
    key="star-2"
    label="2 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={2}
  />
  <BpkInteractiveStar
    key="star-3"
    label="3 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={true}
    type="full"
    value={3}
  />
  <BpkInteractiveStar
    key="star-4"
    label="4 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={4}
  />
  <BpkInteractiveStar
    key="star-5"
    label="5 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={5}
  />
</div>
`;

exports[`BpkInteractiveStarRating should render correctly with 3.5 stars 1`] = `
<div
  className="bpk-star-rating"
  onMouseLeave={[Function]}
>
  <BpkInteractiveStar
    key="star-1"
    label="1 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={1}
  />
  <BpkInteractiveStar
    key="star-2"
    label="2 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={2}
  />
  <BpkInteractiveStar
    key="star-3"
    label="3 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={3}
  />
  <BpkInteractiveStar
    key="star-4"
    label="4 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={4}
  />
  <BpkInteractiveStar
    key="star-5"
    label="5 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={5}
  />
</div>
`;

exports[`BpkInteractiveStarRating should render correctly with 5 stars 1`] = `
<div
  className="bpk-star-rating"
  onMouseLeave={[Function]}
>
  <BpkInteractiveStar
    key="star-1"
    label="1 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={1}
  />
  <BpkInteractiveStar
    key="star-2"
    label="2 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={2}
  />
  <BpkInteractiveStar
    key="star-3"
    label="3 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={3}
  />
  <BpkInteractiveStar
    key="star-4"
    label="4 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={4}
  />
  <BpkInteractiveStar
    key="star-5"
    label="5 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onClick={[Function]}
    onMouseEnter={[Function]}
    selected={true}
    type="full"
    value={5}
  />
</div>
`;
